add positions endpoint
