# internal/handler/position.go
@@ -1,11 +1,13 @@
 package handler
 
 import (
+	"context"
 	"encoding/json"
-	"fmt"
+	"log"
 	"net/http"
 
 	"github.com/nurbekabilev/go-open-api/internal/app"
+	"github.com/nurbekabilev/go-open-api/internal/handler/response"
 	"github.com/nurbekabilev/go-open-api/internal/repo"
 )
 
@@ -13,25 +15,34 @@ func HandleAddPosition(w http.ResponseWriter, r *http.Request) {
 	di := app.DI()
 	ctx := r.Context()
 
+	rs := AddPosition(ctx, di.PositionRepo, r)
+
+	response.WriteJsonResponse(w, rs)
+}
+
+func AddPosition(ctx context.Context, createPosRepo repo.CreatePositionRepo, r *http.Request) response.Response {
+
 	p := repo.Position{}
 	err := json.NewDecoder(r.Body).Decode(&p)
 	if err != nil {
-		fmt.Fprintf(w, "could not decode json body")
-		return
+		log.Printf("could not decode positoin: %v", err)
+		return response.NewServerError(err.Error())
 	}
 
 	err = repo.ValidateAddPositionStruct(p)
 	if err != nil {
-		fmt.Fprintln(w, err)
+		return response.NewBadRequestErrorResponse(err.Error())
 	}
 
-	err = di.PositionRepo.CreatePosition(ctx, p)
+	id, err := createPosRepo.CreatePosition(ctx, p)
 	if err != nil {
-		fmt.Fprintf(w, "could not create position")
-		return
+		log.Printf("could not create position: %v", err)
+		return response.NewServerError(err.Error())
 	}
 
-	fmt.Fprintf(w, "record created succesfully")
+	p.ID = &id
+
+	return response.NewOkResponse(p)
 }
 
 // func (ph PositionHandler) ServeHTTP(w http.ResponseWriter, r *http.Request) {
